--- a/Recursivite.html
+++ b/Recursivite.html
@@ -247,7 +247,7 @@
                             <li>
                                 Ecrire une fonction <mark class="code">hanoi(n, depart, arrive, intermediaire)</mark> affichant toutes les étapes pour résoudre le déplacement de <mark class="code">n</mark> disques du pilier <mark class="code">depart</mark> vers le pilier <mark class="code">arrive</mark> en utilisant le pilier <mark class="code">intermediaire</mark>.<br/>
                                 Les piliers sont des listes dont la première valeur est le nom du pilier puis les autres sont les entiers représentants les rayons des disques placées dans ce pilier.<br/>
-                                Pour résoudre le problème de la tour de Hanoï à 8 disques, nous appellerons <mark class="code">hanoi(["A", 8, 7, 6, 5, 4, 3, 2, 1], ["C"], ["B"])</mark><br/>
+                                Pour résoudre le problème de la tour de Hanoï à 8 disques, nous appellerons <mark class="code">hanoi(8, ["A", 8, 7, 6, 5, 4, 3, 2, 1], ["C"], ["B"])</mark><br/>
                                 Vous pourrez utiliser la fonction <mark class="code">affichage_hanoi.py</mark> pour afficher les étapes intermédiaires.
                             </li>
                         </ol>
