--- a/coefficientsBinomiaux.html
+++ b/coefficientsBinomiaux.html
@@ -9,19 +9,19 @@
         <div class="main">
             <h1>Calcul de coefficients binomiaux</h1>
             <p>
-                En mathématiques, le coefficient binomial <span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span> donne (entre autre) le nombre de façon de réunir k éléments dans un ensemble de n éléments. Par exemples, <span class="big">(</span><span class="binom"><span class="coeff">11</span><span class="coeff">5</span></span><span class="big">)</span> donne le nombre d'équipes de 5 joueurs choisis dans une classe de 11 élèves.
+                En mathématiques, le coefficient binomial <span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span></span> donne (entre autre) le nombre de façon de réunir k éléments dans un ensemble de n éléments. Par exemples, <span class="math"><span class="big">(</span><span class="binom"><span class="coeff">11</span><span class="coeff">5</span></span><span class="big">)</span></span> donne le nombre d'équipes de 5 joueurs choisis dans une classe de 11 élèves.
             </p>
             <p>
                 Les coefficients binomiaux peuvent se calculer par récurrence grâce aux relations :
                 <ul>
-                    <li><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span> = 0, si k &gt; n</li>
-                    <li><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">n</span></span><span class="big">)</span> = 1, quelque-soit la valeur de n</li>
-                    <li><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">0</span></span><span class="big">)</span> = 1, quelque-soit la valeur de n</li>
-                    <li><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span> = <span class="big">(</span><span class="binom"><span class="coeff">n - 1</span><span class="coeff">k - 1</span></span><span class="big">)</span> + <span class="big">(</span><span class="binom"><span class="coeff">n - 1</span><span class="coeff">k</span></span><span class="big">)</span>, quelque-soit les valeurs de n et de k</li>
+                    <li><span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span></span> = 0, si k &gt; n</li>
+                    <li><span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">n</span></span><span class="big">)</span></span> = 1, quelque-soit la valeur de n</li>
+                    <li><span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">0</span></span><span class="big">)</span></span> = 1, quelque-soit la valeur de n</li>
+                    <li><span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span></span> = <span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n - 1</span><span class="coeff">k - 1</span></span><span class="big">)</span></span> + <span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n - 1</span><span class="coeff">k</span></span><span class="big">)</span></span>, quelque-soit les valeurs de n et de k</li>
                 </ul>
             </p>
             <p>
-                Vous devez écrire un programme récursif <mark class="code">coefficient_binomiale(n, k)</mark> qui donne la valeur du coefficient binomial <span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span>.
+                Vous devez écrire un programme récursif <mark class="code">coefficient_binomiale(n, k)</mark> qui donne la valeur du coefficient binomial <span class="math"><span class="big">(</span><span class="binom"><span class="coeff">n</span><span class="coeff">k</span></span><span class="big">)</span></span>.
             </p>
         </div>
         <script type="text/javascript" src="script.js"></script>
