--- a/Tests.html
+++ b/Tests.html
@@ -12,7 +12,7 @@
             </p>
             <h2>Test « si »</h2>
             <p>
-                Le test « si » permet de tester une condition et seulement si elle est vérifiée, exécute des instructions. En python, comme dans beaucoup d'autre langage, le mot-clé utilisé est <mark class="code">if</mark>. Les instructions à effectuer seulement si la condition est vérifiée sont identifiées par une indentation (décallage des instructions vers la droite). La fin de cette indentation indique que les instructions suivantes doivent être exécutées quelque-soit le résultat du test. Exemple :
+                Le test « si » permet de tester une condition et seulement si elle est vérifiée, d'exécuter des instructions. En python, comme dans beaucoup d'autre langage, le mot-clé utilisé est <mark class="code">if</mark>. Les instructions à effectuer seulement si la condition est vérifiée sont identifiées par une indentation (décallage des instructions vers la droite). La fin de cette indentation indique que les instructions suivantes doivent être exécutées quelque-soit le résultat du test. Exemple :
             </p>
             <div class="algo">
                 <input type="button" class="copier" value="📑" title="copier">
@@ -30,7 +30,7 @@
                 </ul>
             </p>
             <div class="exercice">
-                Ecrire un programme qui demande l'age de l'utilisateur et affiche « accès refusé » si l'age est strictement inférieur à 18.
+                Ecrire un programme qui demande l'age de l'utilisateur et affiche «&nbsp;accès refusé&nbsp;» si l'age est strictement inférieur à 18.
             </div>
             <div class="exercice">
                 Lorsqu'il est 19h à Paris, il est 14h à Rio.
@@ -42,7 +42,7 @@
                         <br/>
                         <br/>
                         <br/>
-                        print("Il est", Rio, "à Rio.") <br/>
+                        print("Il est", Rio, "h à Rio.") <br/>
                     </p>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                 <ul>
                     <li>formule rapide à 10 € : plat seul</li>
                     <li>formule classique à 13 € : plat + entrée ou plat + dessert</li>
-                    <li>formule classique à 15 € : plat + entrée + dessert</li>
+                    <li>formule complète à 15 € : plat + entrée + dessert</li>
                 </ul>
                 On suppose que l'utilisateur réponds au deux questions par <mark class="code">"oui"</mark> ou par <mark class="code">"non"</mark>.
                 <div class="algo">
