--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <h1>Terminale NSI</h1>
             <ol>
                 <li><a href="Recursivite.html">Récursivité</a></li>
+                <li><a href="POO.html">Programmation orienté objet</a></li>
             </ol>
         </div>
     </body>
