--- a/POO.html
+++ b/POO.html
@@ -65,14 +65,15 @@
             </p>
             <h2>Déclarer un objet et lui associer des attributs</h2>
             <p>
-                Pour déclarer un objet, je dois décrire tous les éléments qui le composent. Ensuite, je pourrais créer plusieurs <mark>instances</mark> de cet objets en variant les valeurs données aux attributs. Voici un exemple pour créer l'objet <mark class=code>main</mark> qui permettra de stocker des cartes :
+                Pour déclarer un objet, je dois décrire tous les éléments qui le composent. Ensuite, je pourrais créer plusieurs <mark>instances</mark> de cet objets en variant les valeurs données aux attributs. Voici un exemple pour créer l'objet <mark class=code>joueur</mark> qui permettra de stocker des cartes :
             </p>
             <div class="algo">
                 <input type="button" class="copier" value="📑" title="copier">
                 <p class="code">
-                    class main : <br/>
+                    class joueur : <br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;def __init__(self) :<br/>
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.cartes = []<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;self.nom = "Toto"<br/>
                 </p>
             </div>
             <p>
