--- a/POO.html
+++ b/POO.html
@@ -146,13 +146,16 @@
                 On retrouve le mot clé <mark class="code">def</mark> aussi utilisé pour définir une fonction. Le premier paramètre est <mark class="code">self</mark>, pour faire référence à l'objet lui-même.
             </p>
             <div class="exercice">
-                Créer les méthodes <mark class="code">piocher</mark>, <mark class="code">main_est_vide</mark>, <mark class="code">nombre_cartes</mark> et <mark class="code">trier_cartes</mark> pour l'objet <mark class="code">Joueur</mark>.
+                Créer les méthodes <mark class="code">main_est_vide</mark>, <mark class="code">nombre_cartes</mark> et <mark class="code">trier_cartes</mark> pour l'objet <mark class="code">Joueur</mark>.
             </div>
             <div class="exercice">
                 Ajouter la méthode <mark class="code">est_jouable</mark> à l'objet <mark class="code">Carte</mark>. Cette méthode prend en paramètre une valeur et une couleur et vérifie si la carte elle-même peut être jouée.
             </div>
             <div class="exercice">
                 Créer les méthodes <mark class="code">est_vide</mark>, <mark class="code">melanger</mark>, <mark class="code">ajouter_carte</mark>, <mark class="code">reremplir</mark>, <mark class="code">piocher</mark> et <mark class="code">defausser</mark> pour l'objet <mark class="code">Pioche</mark>.
+            </div>
+            <div class="exercice">
+                Ajouter la méthode <mark class="code">piocher</mark> à l'objet <mark class="code">Joueur</mark>. Cette méthode appelle la méthode <mark class="code">piocher</mark> de l'objet <mark class="code">Pioche</mark>.
             </div>
             <h2>Méthodes spéciales</h2>
             <p>
