--- a/POO.html
+++ b/POO.html
@@ -175,6 +175,9 @@
                     </p>
                 </div>
             </p>
+            <div class="exercice">
+                Ajouter la méthode <mark class="code">__str__</mark> à l'objet <mark class="code">Carte</mark> de façon à retourner un texte qui décrit la carte.
+            </div>
         </div>
         <script type="text/javascript" src="script.js"></script>
     </body>
