--- a/POO.html
+++ b/POO.html
@@ -178,6 +178,44 @@
             <div class="exercice">
                 Ajouter la méthode <mark class="code">__str__</mark> à l'objet <mark class="code">Carte</mark> de façon à retourner un texte qui décrit la carte.
             </div>
+            <h2>Petits projets</h2>
+            <h3>Le jeu de UNO</h3>
+            <div class="exercice">
+                Modifier la classe <mark class="code">Jeu</mark> pour :
+                <ol>
+                    <li>ajouter toutes les cartes nécessaires à l'attribut <mark class="code">pioche</mark></li>
+                    <li>distribuer 7 cartes à chaque joueur</li>
+                    <li>ajouter les méthodes <mark class="code">joueur_en cours</mark> retournant le joueur qui joue, <mark class="code">joueur_suivant</mark> qui retourne le nom du joueur suivant, <mark class="code">interdir_jouer_joueur_suivant</mark> qui permet de sauter le tour du joueur suivant, <mark class="code">changement_de_sens</mark> qui permet de changer le sens du jeu et <mark class="code">fin_tour</mark> qui permet de mettre à jour les variables nécessaires à <mark class="code">joueur_en cours</mark> et <mark class="code">joueur_suivant</mark>. Pour écrire ces méthodes, il ne faut pas hésiter à créer tous les attributs nécessaires.</li>
+                </ol>
+            </div>
+            <div class="exercice">
+                <ol>
+                    <li>Renommer votre fichier contenant toutes les classes en <mark class="code">UNO.py</mark></li>
+                    <li>Télécharger le fichier <a href="UNO_console.py"><mark class="code">UNO_console.py</mark></a> dans le même dossier que <mark class="code">UNO.py</mark></li>
+                    <li>Exécuter <mark class="code">UNO_console.py</mark> pour vérifier que l'intégration de <mark class="code">UNO.py</mark> s'est bien passée.</li>
+                </ol>
+            </div>
+            <h3>Votre jeu de cartes ou de tuiles</h3>
+            <div class="exercice">
+                Créer toutes les classes nécessaires pour gérer le jeu de cartes ou de tuiles de votre choix. Quelques idées :
+                <ul>
+                    <li>six qui prend</li>
+                    <li>lobo 77</li>
+                    <li>tabou</li>
+                    <li>skyjo</li>
+                    <li>mistigri</li>
+                    <li>7 familles</li>
+                    <li>trivial poursuit</li>
+                    <li>halli galli</li>
+                    <li>times up</li>
+                    <li>dobble</li>
+                    <li>1000 bornes</li>
+                    <li>belote ou contrée</li>
+                    <li>tarot</li>
+                    <li>domino</li>
+                    <li>mah-jong</li>
+                </ul>
+            </div>
         </div>
         <script type="text/javascript" src="script.js"></script>
     </body>
