--- a/POO.html
+++ b/POO.html
@@ -185,15 +185,16 @@
                 <ol>
                     <li>ajouter toutes les cartes nécessaires à l'attribut <mark class="code">pioche</mark></li>
                     <li>distribuer 7 cartes à chaque joueur</li>
-                    <li>ajouter les méthodes <mark class="code">joueur_en cours</mark> retournant le joueur qui joue, <mark class="code">joueur_suivant</mark> qui retourne le nom du joueur suivant, <mark class="code">interdir_jouer_joueur_suivant</mark> qui permet de sauter le tour du joueur suivant, <mark class="code">changement_de_sens</mark> qui permet de changer le sens du jeu et <mark class="code">fin_tour</mark> qui permet de mettre à jour les variables nécessaires à <mark class="code">joueur_en cours</mark> et <mark class="code">joueur_suivant</mark>. Pour écrire ces méthodes, il ne faut pas hésiter à créer tous les attributs nécessaires.</li>
+                    <li>ajouter les méthodes <mark class="code">joueur_en_cours</mark> retournant le joueur qui joue, <mark class="code">joueur_suivant</mark> qui retourne le nom du joueur suivant, <mark class="code">interdir_jouer_joueur_suivant</mark> qui permet de sauter le tour du joueur suivant, <mark class="code">changement_de_sens</mark> qui permet de changer le sens du jeu et <mark class="code">fin_tour</mark> qui permet de mettre à jour les variables nécessaires à <mark class="code">joueur_en_cours</mark> et <mark class="code">joueur_suivant</mark>. Pour écrire ces méthodes, il ne faut pas hésiter à créer tous les attributs nécessaires.</li>
                 </ol>
             </div>
             <div class="exercice">
                 <ol>
                     <li>Renommer votre fichier contenant toutes les classes en <mark class="code">UNO.py</mark></li>
-                    <li>Télécharger le fichier <a href="UNO_console.py"><mark class="code">UNO_console.py</mark></a> dans le même dossier que <mark class="code">UNO.py</mark></li>
-                    <li>Exécuter <mark class="code">UNO_console.py</mark> pour vérifier que l'intégration de <mark class="code">UNO.py</mark> s'est bien passée.</li>
+                    <li>Télécharger le fichier <a href="UNO_console_monochrome.py"><mark class="code">UNO_console_monochrome.py</mark></a> dans le même dossier que <mark class="code">UNO.py</mark></li>
+                    <li>Exécuter <mark class="code">UNO_console_monochrome.py</mark> pour vérifier que l'intégration de <mark class="code">UNO.py</mark> s'est bien passée.</li>
                 </ol>
+                Remarque : sous linus ou sous replit.com, vous pouvez aussi essayer <a href="UNO_console_couleur.py"><mark class="code">UNO_console_couleur.py</mark></a>.
             </div>
             <h3>Votre jeu de cartes ou de tuiles</h3>
             <div class="exercice">
